Moved script.js to controller directory

--- a/View/index.html
+++ b/View/index.html
@@ -16,6 +16,6 @@
 
     <ul id="taskList"></ul>
 
-    <script src="script.js"></script>
+    <script src="Controller/script.js"></script>
 </body>
 </html>
